--- a/frontend/src/assets/app.css
+++ b/frontend/src/assets/app.css
@@ -1152,6 +1152,7 @@ footer > p {
   justify-content: space-between;
   align-items: center;
   margin-bottom: 25px;
+  padding-right: 20px;
 }
 
 .paper-title {
@@ -2033,6 +2034,12 @@ div[data=clientDrawer] .MuiListItemText-primary {
   font-size: 1.1rem;
 }
 
+.mytitle {
+  font-size: 1.3rem;
+  margin: 15px 0;
+  padding: 5px 20px;
+}
+
 /******************************************************************/
 /*************************** Frameworks ***************************/
 /******************************************************************/
@@ -2175,7 +2182,8 @@ div[data=clientDrawer] .MuiListItemText-primary {
   transition: all 0.5s;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
+  padding-top: 100px;
   background-color: rgba(0,0,0,0.8);
   position: absolute;
   top: 0;
