--- a/frontend/src/assets/app.css
+++ b/frontend/src/assets/app.css
@@ -274,8 +274,8 @@ main {
 
 main > img {
   display: block;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
   position: fixed;
   top: 0;
@@ -2188,12 +2188,13 @@ div[data=clientDrawer] .MuiListItemText-primary {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 1000;
+  z-index: -1;
 }
 
 .modal-container.show {
   transform: scale(1);
   opacity: 1;
+  z-index: 1000;
 }
 
 .modal-container.order-modal {
@@ -2202,6 +2203,7 @@ div[data=clientDrawer] .MuiListItemText-primary {
   height: 100vh;
   background-color: rgba(0,0,0,0.8);
   z-index: 999;
+  padding-top: 15px;
 }
 
 .modal-box {
@@ -2494,7 +2496,7 @@ div[data=clientDrawer] .MuiListItemText-primary {
   }
 
   .topbar ul li {
-    padding: 3px 18px;
+    padding: 3px 5px;
   }
 
   .menu-container {
